Add new stuff in readme

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,15 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<head>\n",
-    "        <meta charset=\"utf-8\" />\n",
-    "        <link rel=\"stylesheet\" href=\"style.css\" />\n",
-    "        <title>Premiers tests du CSS</title>\n",
-    "</head>\n",
-    "\n",
-    "<p>Bonjour et bienvenue sur mon site !</p>\n",
-    "<p>Pour le moment, mon site est un peu <em>vide</em>. Patientez encore un peu !</p>"
+    "<p float=\"left\">\n",
+    "  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src=\"./images/Logo_OpenClassrooms.jpg\" width=\"300\" height=\"300\" />&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; \n",
+    "  <img src=\"./images/logo_pret_a_depenser.jpg\" width=\"300\" height=\"300\" /> \n",
+    "</p>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
